# sdl3-rs

./: .gitmodules  Cargo.toml
.github/workflows/: bindgen.yml  generate-all-bindings.yml  generate-bindgen.yml  on-push-bindgen.yml  push-bindings-to-branch.yml
sdl3-bindgen/: .gitignore  Cargo.toml  README.md  run-ga.sh  run.sh  wrapper.h
sdl3-bindgen/src/: main.rs
sdl3-sys/: .gitignore  Cargo.toml  README.md  build.rs  wrapper.h
sdl3-sys/examples/: hello_window.rs
sdl3-sys/src/: bindings_linux.rs  bindings_windows.rs  lib.rs
sdl3-sys/src/bindings/: aarch64-apple-darwin.rs  x86_64-pc-windows-msvc.rs  x86_64-unknown-linux-gnu.rs
sdl3-sys/tests/: it_links.rs
sdl3-test/: Cargo.toml
sdl3-test/src/: main.rs
